# async-os

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  dslog.py  libcops.txt  rust-toolchain.toml
apps/coroutine_test/: Cargo.toml
apps/coroutine_test/src/: main.rs
apps/echoserver/: Cargo.toml
apps/echoserver/src/: main.rs
apps/thread_test/: Cargo.toml
apps/thread_test/src/: main.rs
apps/thread_yield/: Cargo.toml
apps/thread_yield/src/: main.rs
apps/user_boot/: build.rs
apps/user_boot/src/: main.rs
apps/vdso_scheduler_ktest/: Cargo.toml
apps/vdso_scheduler_ktest/src/: main.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  taic.rs
crates/taic_driver/: Cargo.toml  README.md
crates/taic_driver/pac/: Cargo.toml  taic.svd
crates/taic_driver/src/: cap_queue.rs  error.rs  lib.rs  ready_queue.rs  task.rs
docs/: develop.md  state.md  task_module_refact.md  unified-api.md  utaic.md
evaluation/src/: lib.rs  test_async_trait.rs
modules/aos_api/: Cargo.toml
modules/aos_api/src/: lib.rs  mem.rs  net.rs  task.rs  time.rs
modules/arch_boot/: Cargo.toml  build.rs
modules/arch_boot/src/: lib.rs  mp.rs  vdso.rs
modules/async_fs/: Cargo.toml
modules/async_fs/src/: fops.rs  mounts.rs  root.rs
modules/async_fs/src/api/: dir.rs  file.rs  port.rs
modules/async_fs/src/fs/: fatfs.rs  mod.rs
modules/async_io/: Cargo.toml
modules/async_io/src/: buf_reader.rs  buf_writer.rs  cursor.rs  ioslice.rs  lib.rs  prelude.rs
modules/async_mem/: Cargo.toml
modules/async_mem/src/: area.rs  backend.rs  lib.rs
modules/async_net/: Cargo.toml
modules/async_net/src/: lib.rs
modules/async_std/: Cargo.toml
modules/async_std/src/: env.rs  lib.rs  os.rs  prelude.rs  time.rs
modules/async_std/src/fs/: dir.rs  file.rs  mod.rs
modules/async_std/src/io/: mod.rs  stdio.rs
modules/async_std/src/net/: mod.rs  tcp.rs  udp.rs
modules/async_std/src/sync/: mod.rs
modules/async_std/src/task/: mod.rs  multi.rs
modules/async_std/src/thread/: mod.rs  multi.rs
modules/async_utils/: Cargo.toml
modules/async_utils/src/: lib.rs
modules/async_vfs/: Cargo.toml
modules/async_vfs/src/: basic.rs  lib.rs  macros.rs
modules/axfs_devfs/: Cargo.toml
modules/axfs_devfs/src/: dir.rs  lib.rs  null.rs  random.rs  tests.rs  zero.rs
modules/axfs_ramfs/: Cargo.toml
modules/axfs_ramfs/src/: dir.rs  file.rs  interrupts.rs  lib.rs  tests.rs
modules/axfutex/: Cargo.toml
modules/axfutex/src/: flags.rs  futex.rs  lib.rs  queues.rs
modules/axhal/: Cargo.toml  linker.lds.S
modules/axhal/src/: cpu.rs  lib.rs  mem.rs
modules/executor/: Cargo.toml
modules/executor/src/: api.rs  executor.rs  fd_manager.rs  futex.rs  lib.rs  link.rs  loader.rs  signal.rs  stdio.rs
modules/feat/: Cargo.toml
modules/kernel_guard/: Cargo.toml
modules/process/: Cargo.toml  README.md
modules/process/src/: api.rs  current.rs  executor.rs  futex.rs  lib.rs  link.rs  loader.rs  process.rs  signal.rs  stdio.rs
modules/runtime/: Cargo.toml
modules/runtime/src/: lib.rs  mp.rs
modules/scheduler/: Cargo.toml
modules/sync/: Cargo.toml
modules/sync/src/: lib.rs  mutex.rs  wait_queue.rs
modules/syscall/: Cargo.toml
modules/syscall/src/: api.rs  ctypes.rs  lib.rs  syscall.rs  trap.rs
modules/syscall/src/syscall_fs/: mod.rs
modules/syscall/src/syscall_fs/ctype/: dir.rs  epoll.rs  eventfd.rs  file.rs  mount.rs  pidfd.rs  pipe.rs
modules/syscall/src/syscall_fs/imp/: ctl.rs  epoll.rs  eventfd.rs  io.rs  link.rs  mod.rs  mount.rs  poll.rs  stat.rs
modules/syscall/src/syscall_mem/: imp.rs  mod.rs
modules/syscall/src/syscall_net/: imp.rs  mod.rs  socket.rs
modules/syscall/src/syscall_task/: mod.rs
modules/syscall/src/syscall_task/imp/: futex.rs  mod.rs  schedule.rs  signal.rs  task.rs  utils.rs
modules/syscall/src/syscll_taic/: mod.rs  taic_syscall_id.rs
modules/syscall/src/syscll_taic/imp/: mod.rs
modules/task_api/: Cargo.toml
modules/task_api/src/: block.rs  exit.rs  join.rs  lib.rs  sleep.rs  timers.rs  wait_list.rs  yield_.rs
modules/taskctx/: Cargo.toml  README.md
modules/taskctx/src/: current.rs  kstack.rs  lib.rs  stack_pool.rs  task.rs  waker.rs
modules/taskctx/src/arch/: mod.rs
modules/taskctx/src/arch/riscv/: mod.rs
modules/trampoline/: Cargo.toml  control_flow.md  notify.md  trap.md
modules/trampoline/src/: executor_api.rs  fs_api.rs  init_api.rs  lib.rs  process_api.rs  task_api.rs  trap_api.rs
modules/trampoline/src/arch/: mod.rs
modules/trampoline/src/arch/riscv/: mod.rs
scripts/make/: qemu.mk
syscalls/: Cargo.toml
syscalls/src/: fut.rs  lib.rs  syscall.rs  task_trait.rs
syscalls/src/raw_syscall/: aarch64.rs  arm.rs  arm_thumb.rs  loongarch64.rs  mips.rs  mips64.rs  mod.rs  powerpc.rs  riscv32.rs  riscv64.rs  s390x.rs  x86.rs  x86_64.rs
uruntime/: Cargo.toml
uruntime/src/: api.rs  current.rs  current_scheduler.rs  lib.rs  scheduler.rs  task.rs  waker.rs
uruntime/utaskctx/: Cargo.toml
uruntime/utaskctx/src/: current.rs  lib.rs  task.rs  waker.rs
user-lib/: Cargo.toml
user-lib/src/: lib.rs
user-task-scheduler/: Cargo.toml
user-task-scheduler/src/: lib.rs
user_apps/: Makefile
user_apps/.cargo/: config.toml
user_apps/batch_syscall/: Cargo.toml
user_apps/pipetest/: Cargo.toml
user_apps/pipetest/src/: main.rs
user_apps/pipetest/src/implementation/: async_await.rs  async_non_await.rs  mod.rs  non_async_non_await.rs
user_apps/std_thread_test/: Cargo.toml
user_apps/syscall_test/: Cargo.toml
user_apps/vdso_scheduler_utest/: Cargo.toml
user_apps/vdso_test/: Cargo.toml
vdso/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
vdso/heap/: Cargo.toml
vdso/heap/src/: imp.rs  lib.rs  linked_list.rs  tests.rs
vdso/queue/: Cargo.toml
vdso/queue/src/: atomic.rs  guard.rs  lib.rs  mpmc.rs  tests.rs
vdso/shared_scheduler/: Cargo.toml
vdso/shared_scheduler/src/: lib.rs
vdso/src/: api.rs  data.rs  id.rs  lib.rs  mem_map.rs  percpu.rs  prio_queue.rs  scheduler.rs  setup.rs  stack_pool.rs  test.rs  vdso.S
vdso/vdso_lib/: Cargo.toml
vdso/vdso_lib/src/: lib.rs  vdso_func.rs
(+160 files in other folders)
