[patch."https://github.com/Starry-OS/kernel_guard.git".kernel_guard]
path = "modules/kernel_guard"

[patch."https://github.com/Starry-OS/axhal.git".axhal]
path = "modules/axhal"

[profile.dev]
lto = true

[profile.release]
lto = true

[workspace]
members = [
    "apps/coroutine_test",
    "apps/user_boot",
    "apps/fs/shell",
    "apps/thread_test",
    "evaluation",
    "modules/async_utils",
    "modules/async_io",
    "modules/async_std",
    "modules/async_fs",
    "modules/async_vfs",
    "modules/aos_api",
    "modules/async_mem",
    "modules/taskctx",
    "modules/trampoline",
    "modules/executor",
    "modules/sync",
    "modules/runtime",
    "modules/arch_boot",
    "modules/syscall",
    "modules/feat",
    "modules/async_utils/afit",
    "modules/task_api",
    "modules/axfutex",
    "modules/async_net",
    "user_apps/hello_world",
    "syscalls",
    "user_apps/pipetest",
    "user_apps/std_thread_test",
    "user-lib",
    "vdso",
    "vdso/cops",
    "vdso/pilf_buddy_alloc",
    "vdso/pi_pointer",
    "vdso/queue",
    "user_apps/vdso_test",
    "uruntime",
    "user_apps/syscall_test",
    "user_apps/batch_syscall",
]
resolver = "2"
