[package]
name = "uruntime"
version = "0.1.0"
edition = "2021"

[features]
default = ["sched_fifo"]

sched_fifo = []
sched_rr = []
sched_cfs = []
sched_taic = []

[dependencies]
cfg-if = "1.0"
taic-driver = { git = "https://github.com/taic-repo/taic-driver.git" }
syscalls = { path = "../syscalls" }
heapless = "0.8.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.11"
