[package]
name = "user-task-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
# task_management = { git = "https://github.com/rosy233333/project2210132-233191", branch = "umode", default-features = false, features = [] }
task_management = { path = "../../project2210132-233191/code/task_management", default-features = false, features = [] }

[features]
thread = []