[package]
name = "vdso"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
xmas-elf = "0.10.0"
scheduler = { path = "../crates/scheduler" }
percpu = "0.2"
queue = { path = "./queue" }

[build-dependencies]
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
regex = "1.8.5"

[dev-dependencies]
xmas-elf = "0.10.0"
