[package]
name = "async_fs"
version = "0.1.0"
edition = "2021"

[features]
default = ["fatfs"]

fatfs = ["dep:fatfs"]
myfs = []
ext4_rs = []
another_ext4 = []
use-ramdisk = []
lwext4_rust = []
devfs = []
ramfs = []
procfs = []
sysfs = []

[dependencies]
log = "0.4"
cfg-if = "1.0"
async_io = { path = "../async_io" }
async_vfs = { path = "../async_vfs" }
sync = { path = "../sync" }
axdriver = { git = "https://github.com/Starry-OS/axdriver.git", features = ["block"] }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
capability = { git = "https://github.com/Starry-OS/capability.git" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
bitflags = "2.6"
async_utils = { path = "../async_utils" }

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
rev = "85f06e0"
optional = true
default-features = false
features = [ # no std
    "alloc",
    "lfn",
    "log_level_trace",
    "unicode",
]