[package]
name = "async_fs"
version = "0.1.0"
edition = "2021"

[features]
default = ["fatfs", "devfs", "ramfs", "procfs", "sysfs"]

fatfs = ["dep:fatfs"]
myfs = []
ext4_rs = []
another_ext4 = []
use-ramdisk = []
lwext4_rust = []
devfs = ["dep:axfs_devfs"]
ramfs = ["dep:axfs_ramfs"]
procfs = ["dep:axfs_ramfs"]
sysfs = ["dep:axfs_ramfs", "dep:axconfig"]
monolithic = []

[dependencies]
log = "0.4"
cfg-if = "1.0"
async_io = { path = "../async_io" }
async_vfs = { path = "../async_vfs" }
sync = { path = "../sync" }
axdriver = { git = "https://github.com/Starry-OS/axdriver.git", features = ["block"] }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
capability = { git = "https://github.com/Starry-OS/capability.git" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git", optional = true }
bitflags = "2.6"
async_utils = { path = "../async_utils" }
axfs_devfs = { path = "../axfs_devfs", optional = true }
axfs_ramfs = { path = "../axfs_ramfs", optional = true }

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
rev = "85f06e0"
optional = true
default-features = false
features = [ # no std
    "alloc",
    "lfn",
    "log_level_trace",
    "unicode",
]