[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[features]
thread = ["taskctx/thread", "sync/thread", "task_api/thread"]
irq = ["sync/irq"]
smp = ["spinlock/smp"]

preempt = ["irq", "percpu/preempt", "kernel_guard/preempt", "taskctx/preempt"]

sched_fifo = ["taskctx/sched_fifo"]
sched_rr = ["taskctx/sched_rr"]
sched_cfs = ["taskctx/sched_cfs"]

[dependencies]
spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
elf_parser = { git = "https://github.com/Starry-OS/elf_parser.git" }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git"}
percpu = { git = "https://github.com/Starry-OS/percpu.git", optional = true }
kernel_guard = { git = "https://github.com/Starry-OS/kernel_guard.git", optional = true }
axsignal = { git = "https://github.com/Starry-OS/axsignal.git" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
xmas-elf = "0.9.0"
bitflags = "2.6"
log = "0.4"
task_api = { path = "../task_api" }

sync = { path = "../sync" }
taskctx = { path = "../taskctx" }
async_mem = { path = "../async_mem" }
async_io = { path = "../async_io"}
async_fs = { path = "../async_fs" }
axhal = { git = "https://github.com/Starry-OS/axhal.git" }
riscv = "0.10"
axfutex = { path = "../axfutex" }
async_utils = { path = "../async_utils" }
