[package]
name = "pipetest"
version = "0.1.0"
edition = "2021"

[dependencies]
syscalls = { path = "../../syscalls" }

[features]
async-await = []
async-non-await = ["syscalls/thread"]
# non-async-non-await = ["syscalls/thread"] # 暂未完成
blocking = ["syscalls/blocking"]
default = ["async-non-await", "blocking"]