[package]
name = "pipetest"
version = "0.1.0"
edition = "2021"

[dependencies]
syscalls = { path = "../../syscalls" }
user-task-scheduler = { path = "../../user-task-scheduler" }

[features]
async-await = []
async-non-await = ["syscalls/thread", "user-task-scheduler/thread"]
non-async-non-await = ["syscalls/thread", "user-task-scheduler/thread"] # 暂未完成
blocking = ["syscalls/blocking"]
default = ["non-async-non-await"]